infrastructure/configs/istio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kiali
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/name: kiali
    app.kubernetes.io/part-of: kiali
    app.kubernetes.io/version: v2.21.0
    helm.sh/chart: kiali-server-2.21.0
    version: v2.21.0
  name: kiali
  namespace: istio-system
spec:
  ports:
  - appProtocol: http
    name: http
    port: 20001
    protocol: TCP
  - appProtocol: http
    name: http-metrics
    port: 9090
    protocol: TCP
  selector:
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/name: kiali
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kiali
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/name: kiali
    app.kubernetes.io/part-of: kiali
    app.kubernetes.io/version: v2.21.0
    helm.sh/chart: kiali-server-2.21.0
    version: v2.21.0
  name: kiali
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kiali
      app.kubernetes.io/name: kiali
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 35ac15457de3a25040e953fa6178396e95991865aed21cb1bd8c131c5d3a81c7
        kiali.io/dashboards: go,kiali
        prometheus.io/port: "9090"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
      labels:
        app: kiali
        app.kubernetes.io/instance: kiali
        app.kubernetes.io/name: kiali
        app.kubernetes.io/part-of: kiali
        app.kubernetes.io/version: v2.21.0
        helm.sh/chart: kiali-server-2.21.0
        sidecar.istio.io/inject: "false"
        version: v2.21.0
      name: kiali
    spec:
      containers:
      - command:
        - /opt/kiali/kiali
        - -config
        - /kiali-configuration/config.yaml
        image: quay.io/kiali/kiali:v2.21
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
        name: kiali
        ports:
        - containerPort: 20001
          name: api-port
        - containerPort: 9090
          name: http-metrics
        readinessProbe:
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /kiali/healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /kiali-configuration
          name: kiali-configuration
        - mountPath: /kiali-cert
          name: kiali-cert
        - mountPath: /kiali-secret
          name: kiali-secret
        - mountPath: /kiali-cabundle
          name: kiali-cabundle
        - mountPath: /kiali-remote-cluster-secrets/kiali-multi-cluster-secret
          name: kiali-multi-cluster-secret
          readOnly: true
      serviceAccountName: kiali
      volumes:
      - configMap:
          name: kiali
        name: kiali-configuration
      - name: kiali-cert
        secret:
          optional: true
          secretName: istio.kiali-service-account
      - name: kiali-secret
        secret:
          optional: true
          secretName: kiali
      - configMap:
          name: kiali-cabundle
          optional: true
        name: kiali-cabundle
      - name: kiali-multi-cluster-secret
        secret:
          optional: true
          secretName: kiali-multi-cluster-secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  hostnames:
  - kiali.${cluster_domain}
  parentRefs:
  - kind: Gateway
    name: traefik-gateway
    namespace: traefik-system
    sectionName: websecure
  rules:
  - backendRefs:
    - name: kiali
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
