infrastructure/configs/kiali-instance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  hostnames:
  - kiali.${cluster_domain}
  parentRefs:
  - kind: Gateway
    name: traefik-gateway
    namespace: traefik-system
    sectionName: websecure
  rules:
  - backendRefs:
    - name: kiali
      port: 20001
    matches:
    - path:
        type: PathPrefix
        value: /
