infrastructure/configs/rabbitmq.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq
  namespace: rabbitmq-system
spec:
  hostnames:
  - rabbitmq.${cluster_domain}
  parentRefs:
  - kind: Gateway
    name: traefik-gateway
    namespace: traefik-system
    sectionName: websecure
  rules:
  - backendRefs:
    - name: rabbitmq
      port: 15672
    matches:
    - path:
        type: PathPrefix
        value: /
