infrastructure/configs/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: traefik-system
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-to-internal-bridge
  namespace: traefik-system
spec:
  hosts:
  - dev-01.skiyl9x.pp.ua
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
  resolution: NONE
